force-app/main/default/objects/DuplicateFinderSetting__mdt/DuplicateFinderSetting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for duplicate finder configurations</description>
    <label>Duplicate Finder Setting</label>
    <pluralLabel>Duplicate Finder Settings</pluralLabel>
</CustomObject>