force-app/main/default/objects/DuplicateFinderSetting__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Size of batches to process (between 1 and 2000)</description>
    <label>Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>