force-app/main/default/objects/DuplicateFinderSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this duplicate finder setting is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>