force-app/main/default/objects/DuplicateFinderSetting__mdt/fields/MasterRecordStrategy__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordStrategy__c</fullName>
    <description
  >Strategy to determine which record becomes the master record (OldestCreated, NewestCreated, MostComplete)</description>
    <label>Master Record Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OldestCreated</fullName>
                <default>true</default>
                <label>Oldest Created</label>
            </value>
            <value>
                <fullName>NewestCreated</fullName>
                <label>Newest Created</label>
            </value>
            <value>
                <fullName>MostComplete</fullName>
                <label>Most Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>