force-app/main/default/objects/DuplicateFinderSetting__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>API name of the object to check for duplicates</description>
    <inlineHelpText>Enter the API name of the Salesforce object</inlineHelpText>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>